utilities/Sol/modules/grammars/ide/src/test/resources/cocos/invalid/WriteModule.ide
package invalid

typedef module WriteModule {
    label "Some Label"

    module someModule: CommonModule
}
